--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postinstall": "patch-package"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "@react-navigation/stack": "^6.3.20",
@@ -26,6 +27,7 @@
     "react-native": "0.73.1",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-paper": "^5.11.4",
+    "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.0.3"
@@ -36,9 +38,9 @@
     "@babel/runtime": "^7.20.0",
     "@react-native/eslint-config": "^0.73.1",
     "@react-native/metro-config": "^0.73.2",
+    "@react-native/typescript-config": "^0.73.1",
     "@tsconfig/react-native": "^3.0.0",
     "@types/metro-config": "^0.76.3",
-    "@react-native/typescript-config": "^0.73.1",
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
