--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@rneui/themed": "^0.0.0-edge.2",
     "react": "18.2.0",
     "react-native": "0.73.1",
+    "react-native-element-dropdown": "^2.10.1",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.14.0",
     "react-native-paper": "^5.11.4",
     "react-native-reanimated": "^3.6.1",
