--- a/ios/FamyllApp/Info.plist
+++ b/ios/FamyllApp/Info.plist
@@ -52,6 +52,11 @@
 		<string>fonts/Zocial.ttf</string>
 		<string>fonts/Fontisto.ttf</string>
 	</array>
+	<key>LSApplicationQueriesSchemes</key> 
+	<array> 
+		<string>tel</string> 
+		<string>telprompt</string> 
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
