--- a/ios/Podfile
+++ b/ios/Podfile
@@ -43,6 +43,7 @@ target 'FamyllApp' do
     inherit! :complete
     # Pods for testing
   end
+  pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
 
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
