--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "reactotron-react-native": "^5.0.4",
-    "typescript": "5.0.4"
+    "typescript": "5.0.4",
+    "babel-plugin-module-resolver": "4.1.0"
   },
   "engines": {
     "node": ">=18"
