--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-native-reanimated": "^3.6.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0",
+    "react-native-splash-screen": "^3.3.0",
     "react-native-vector-icons": "^10.0.3"
   },
   "devDependencies": {
@@ -46,14 +47,14 @@
     "@types/react": "^18.2.6",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
+    "babel-plugin-module-resolver": "4.1.0",
     "eslint": "^8.19.0",
     "jest": "^29.6.3",
     "metro-react-native-babel-preset": "0.76.5",
     "prettier": "2.8.8",
     "react-test-renderer": "18.2.0",
     "reactotron-react-native": "^5.0.4",
-    "typescript": "5.0.4",
-    "babel-plugin-module-resolver": "4.1.0"
+    "typescript": "5.0.4"
   },
   "engines": {
     "node": ">=18"
